# ScBMLP

./: .gitignore  README.md  __init__.py  bmlp.py  myeloid_dev.ipynb  myeloid_dev_hierarchical.ipynb  pyproject.toml
notebooks/: __init__.py  interferon_classes.ipynb  myeloid_classes.ipynb  myeloid_dev.ipynb  myeloid_dev_hierarchical.ipynb  myeloid_freqs.ipynb  perturbation_classes.ipynb  perturbation_regression.ipynb  sex_classifier.ipynb  simulation_classes.ipynb
scripts/: __init__.py  bmlp.py  datasets.py  utils.py
