[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "bmlp"
version = "0.1.0"
description = "Bilinear Multi-Layer Perceptrons for Hierarchical Single-Cell Analysis"
readme = "README.md"
authors = ["Kamal Maher <kamal.m.maher@gmail.com>"]
license = "MIT"
homepage = "https://github.com/kmaherx/bmlp"
repository = "https://github.com/kmaherx/bmlp"
documentation = "https://github.com/kmaherx/bmlp"
keywords = ["bioinformatics", "single-cell", "machine-learning", "gene-expression"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
packages = [{include = "scripts"}, {include = "notebooks"}]

[tool.poetry.dependencies]
python = ">=3.9"
torch = ">=2.0.0"
numpy = ">=1.21.0"
pandas = ">=1.5.0"
scipy = ">=1.9.0"
matplotlib = ">=3.5.0"
plotly = ">=5.0.0"
scanpy = ">=1.9.0"
anndata = ">=0.8.0"
scikit-learn = ">=1.1.0"
umap-learn = ">=0.5.0"
einops = ">=0.6.0"
gseapy = ">=1.0.0"
requests = ">=2.28.0"
jupyter = ">=1.0.0"
ipykernel = ">=6.0.0"
ipywidgets = ">=8.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
black = ">=22.0.0"
flake8 = ">=5.0.0"
mypy = ">=0.990"
pre-commit = ">=2.20.0"

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
