[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ScBMLP"
version = "0.1.0"
description = "Bilinear Multi-Layer Perceptrons for Single-Cell Analysis"
readme = "README.md"
authors = ["Kamal Maher <kamal.m.maher@gmail.com>"]
license = "MIT"
homepage = "https://github.com/kmaherx/ScBMLP"
repository = "https://github.com/kmaherx/ScBMLP"
documentation = "https://github.com/kmaherx/ScBMLP"
keywords = ["bioinformatics", "single-cell", "machine-learning", "gene-expression"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
packages = [{include = "scripts"}, {include = "notebooks"}]

[tool.poetry.dependencies]
python = ">=3.9"
torch = ">=1.13.0"
numpy = ">=1.20.0"
pandas = ">=1.3.0"
scipy = ">=1.7.0"
matplotlib = ">=3.4.0"
plotly = ">=5.0.0"
scanpy = ">=1.8.0"
anndata = ">=0.8.0"
scikit-learn = ">=1.0.0"
umap-learn = ">=0.5.0"
einops = ">=0.4.0"
gseapy = ">=0.10.0"
requests = ">=2.25.0"
jupyter = ">=1.0.0"
ipykernel = ">=6.0.0"
ipywidgets = ">=7.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=6.2.0"
black = ">=21.0.0"
flake8 = ">=4.0.0"
mypy = ">=0.910"
pre-commit = ">=2.15.0"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
